fix nav links space on mobile

--- a/assets/sass/partials/_nav.scss
+++ b/assets/sass/partials/_nav.scss
@@ -72,11 +72,11 @@
 .site-nav__link {
     display:block;
     position: relative;
-    margin:0 0 $su 0;
+    margin:0 0 15px 0;
     padding:0.5em;
     line-height: 1;
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: bold;
     color:white;
     text-transform: uppercase;
